@@ -8,7 +8,8 @@ Version history:
 v.1.2 - /06/2018
  * Adding a new big feature: "convert big PNG files to JPG format" (WIP)
  * Adding a new option to set background color while doing any PNG operations
-   that remove transparency (convert big and reduce colors). (WIP)
+   that remove transparency (convert big and reduce colors).
+ * Adding an option to set background color in hexadecimal mode (like in HTML).
  * Changed the transparency removal algorithm to something better.
  * Created some global constants for iOS console and thread settings.
  * Created a global constant for JPEG quality and raised the default to 80.
